# edgeai-project

./: .gitignore  CLAUDE.md  README.md  accuracy.csv  accuracy.md  accuracy.py  benchmark.py  export_models.py  make_chart.py  make_sweep_chart.py  pyproject.toml  requirements.txt  results.csv  results.md  sweep.csv  sweep.md  yolo11n_int8.tflite
src/yolo_pi_bench/: accuracy.py  chart.py  cli.py  formats.py  report.py  speed.py
yolo11n_ncnn_model/: metadata.yaml  model.ncnn.param
yolo11n_ncnn_model_320/: metadata.yaml  model.ncnn.param  model_ncnn.py
yolo11n_ncnn_model_480/: metadata.yaml  model.ncnn.param  model_ncnn.py
